fix nginx config

--- a/nginx.example.conf
+++ b/nginx.example.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location @proxy_to_app {
-        proxy_pass http://localhost:5000/;
+        proxy_pass http://localhost:5000;
 
         proxy_redirect          off;
         proxy_set_header        Host                $host;
